# PaperGPT

./: CMakeLists.txt  PaperGPT-Bridging-Header.h  README.md  VGGImplementation.ipynb  embedding.cpp  embedding.h  main.cpp  old_code.cpp  prompts.cpp  prompts.h  swiftCode.swift  wrapper.c  wrapper.cpp  wrapper.mm
header/: embedding.h  prompts.h  wrapper.h
